# flutter-ndi-player

./: README.md  pubspec.yaml
android/: local.properties
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: helloworld-c.cpp  native_cpp
android/app/src/main/kotlin/com/example/ndi_player/: MainActivity.kt  RegisterRender.kt  Render.kt  Texture.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: android_debug.dart  ffi_bridge.dart  home_page.dart  main.dart  my_app_state.dart  pages.dart  player_texture.dart  player_window.dart  program_control.dart  sources_page.dart  texture_controller.dart
linux/: CMakeLists.txt  my_application.cc  native_cpp
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_cpp/: CMakeLists.txt  control_player.cpp  control_player.hpp  extern_api.cpp  logger.hpp  ndi_input_packet_observer.cpp  ndi_input_packet_observer.hpp  ndi_src_observer.hpp  program_switch.cpp  program_switch.hpp  render_vid_frame.cpp  render_vid_frame.hpp
native_cpp/DartApiDL/include/: dart_api_dl.c
native_cpp/audio-play/: CMakeLists.txt  audio_play_lib.cpp
native_cpp/audio-play/audio-play-lib/: CMakeLists.txt  Cargo.toml
native_cpp/audio-play/audio-play-lib/src/: audio_rx.rs  lib.rs
native_cpp/audio-play/audio-play-lib/src/audio_rx/: audio_rx.rs
native_cpp/audio-play/include/: audio_play_lib.h
native_cpp/common/: CMakeLists.txt  conv-scale.cpp  conv-scale.hpp  custom_thread.hpp  dbg_print_buf.hpp  frame-queue.cpp  frame-queue.hpp  logger.cpp  logger.hpp  msg_queue.hpp  safe-queue.hpp
native_cpp/interfaces/: frame_observer.hpp  input-control.hpp  input-observer.hpp
native_cpp/interfaces-ndi/: input_packet_observer.hpp
native_cpp/ndi-rx/: CMakeLists.txt  ndi-app.cpp  ndi-app.hpp  ndi-rx.cpp  ndi-rx.hpp  source-container.hpp
native_cpp/ndi-rx-scan/: CMakeLists.txt  ndi-rx.cpp  ndi-rx.hpp
native_cpp/player/: CMakeLists.txt  android-codec.cpp  android-codec.hpp  codec.hpp  decoder-loop.cpp  decoder-loop.hpp  egl_wrap.hpp  linux-decoder.cpp  linux-decoder.hpp  nal_parse.cpp  nal_parse.hpp  player.cpp  player.hpp  render.cpp  render.hpp  render_vid_frame.cpp  render_vid_frame.hpp  screen-player.cpp  screen-player.hpp  sps_pps_parser.cpp  sps_pps_parser.hpp  texture.hpp  window.cpp  window.hpp
native_cpp/rx-frames-controller/: CMakeLists.txt  rx-frame-controller.cpp  rx-frame-controller.hpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
