[package]
name = "audio-play-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
android_logger = "0.13.3"
atomic_float = "0.1.0"
crossbeam-queue = "0.3.8"
lazy_static = "1.4.0"
log = "0.4.20"
oboe = "0.5.0"
once_cell = "1.19.0"

[dev-dependencies]
atomic_float = "0.1.0"
crossbeam-queue = "0.3.8"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"